# AssetManager

./: .env.example  .gitignore  GEMINI.md  README.md  package-lock.json  pyproject.toml  secrets.json.example  settings.json.example  test_pytest.db  test_snapshot.db
.agents/roles/: plan_reviewer.md  technical_consultant.md
.agents/rules/: code-review.md  commit.md  docstring.md  no-init-py.md  tdd.md
.agents/workflows/: commit.md  develop.md  execute.md  plan.md
.gemini/agents/: code-reviewer.md  plan_reviewer.md  technical_consultant.md
docs/: PRD.md  gemini_cli_agent_skills.md  gemini_cli_creating_agent_skills.md  gemini_cli_subagent.md
docs/planning/: plan_fix_dashboard_account_filter.md  plan_fix_yearly_stats_historical_data.md  rqmt_fix_dashboard_account_filter.md  rqmt_fix_yearly_stats_historical_data.md
scripts/: cleanup_snapshots.py  db_query.py  dev.py  import_historical_snapshots.py  migrate_total_deposit_to_period_deposit.py  test.py  test_yfinance.py  update_cash_holdings.py  update_holdings.py
src/backend/: database.py  main.py  migration.py  models.py  seed.py
src/frontend/: index.html  package-lock.json  (+3 more)
tests/: conftest.py  test_asset_service.py  test_backup.py  test_bulk_prices.py  test_config.py  test_connection.py  test_dashboard_filter.py  test_dashboard_prices.py  test_dashboard_snapshots.py  test_dashboard_sorting_backend.py  test_dashboard_stats.py  test_db_manage.py  test_db_schema.py  test_exchange.py  test_kiwoom_integration.py  test_migration.py  test_snapshot_save.py  test_stocks_api.py  test_watchlist_api.py
work/: memo.md
(+57 files in other folders)
